--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <!-- NAVBAR -->
     <nav>
-        <div class="logo">Marwan Merdji</div>
+        <div class="logo">
+            <img src="logo.png" alt="Logo de Marwan Merdji">
+        </div>
         <div class="menu">
             <a href="#apropos">À propos</a>
             <a href="#competences">Compétences</a>
@@ -22,23 +24,24 @@
 
     <!-- SECTION 1 : Présentation -->
     <section class="hero" id="apropos">
-        <div class="hero-img">
-            <img src="marwan.png" alt="Photo de profil">
-        </div>
-        <div class="hero-text">
-            <h1>Marwan Merdji</h1>
-            <p>Développeur Web & IoT | Passionné de cybersécurité et d'automatisation</p>
-            <div class="social-links">
-                <a href="https://github.com/merdjiMarwan" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub"> GitHub
-                </a>
-                <a href="https://www.linkedin.com/in/marwan-m-73a08b2a1" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn"> LinkedIn
-                </a>
-                <a href="mailto:marwan.merdji@gmail.com">
-                    <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email"> marwan.merdji@gmail.com
-                </a>
-                
+        <div class="hero-content">
+            <div class="hero-img">
+                <img src="marwan.png" alt="Photo de profil">
+            </div>
+            <div class="hero-text">
+                <h1>Marwan Merdji</h1>
+                <p>Développeur Web & IoT | Passionné de cybersécurité et d'automatisation</p>
+                <div class="social-links">
+                    <a href="https://github.com/merdjiMarwan" target="_blank">
+                        <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub"> GitHub
+                    </a>
+                    <a href="https://www.linkedin.com/in/marwan-m-73a08b2a1" target="_blank">
+                        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn"> LinkedIn
+                    </a>
+                    <a href="mailto:marwan.merdji@gmail.com">
+                        <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email"> Email
+                    </a>
+                </div>
             </div>
         </div>
     </section>
