--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div class="hero-text">
                 <h1>Marwan Merdji</h1>
-                <p>Développeur Web & IoT | Passionné de cybersécurité et d'automatisation</p>
+                <p>Développeur/Designer Web | Passionné de réseau et cybersécurité</p>
                 <div class="social-links">
                     <a href="https://github.com/merdjiMarwan" target="_blank">
                         <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub"> GitHub
@@ -39,7 +39,7 @@
                         <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn"> LinkedIn
                     </a>
                     <a href="mailto:marwan.merdji@gmail.com">
-                        <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email"> Email
+                        <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email"> marwan.merdji@gmail.com
                     </a>
                 </div>
             </div>
@@ -51,9 +51,17 @@
         <h2>Compétences</h2>
         <div class="skills-list">
             <div class="skill">HTML / CSS</div>
+            <div class="skill">PHP</div>
             <div class="skill">JavaScript</div>
             <div class="skill">Python</div>
-            <div class="skill">Node.js</div>
+            <div class="skill">C++</div>
+            <div class="skill">MySQL</div>
+            <div class="skill">Cisco Packet Tracer</div>
+            <div class="skill">GitHub</div>
+            <div class="skill">Docker</div>
+            <div class="skill">StarUML</div>
+            <div class="skill">Kali Linux</div>
+            <div class="skill">KeePass</div>
         </div>
     </section>
 
@@ -61,9 +69,29 @@
     <section class="projects" id="projets">
         <h2>Projets</h2>
         <div class="project-list">
-            <div class="project-card">Projet 1</div>
-            <div class="project-card">Projet 2</div>
-            <div class="project-card">Projet 3</div>
+            <!-- Projet 1 -->
+            <div class="project-card">
+                <img src="cryps.png" alt="Logiciel de Cryptage" class="project-image">
+                <h3>Logiciel de Cryptage</h3>
+                <p>Logiciel de cryptage pour sécuriser les données personnelles.</p>
+                <a href="https://github.com/kallechem/Project-Cryptag" target="_blank" class="project-link">Voir sur GitHub</a>
+            </div>
+
+            <!-- Projet 2 -->
+            <div class="project-card">
+                <img src="easyportal.png" alt="Portail Automatisé" class="project-image">
+                <h3>Easy Portal</Portal></h3>
+                <p>Site Web Administraeur pour la gestion d'un portail automatisé.</p>
+                <a href="https://github.com/JR-CIEL-2-PROJETS/25-easyportal" target="_blank" class="project-link">Voir sur GitHub</a>
+            </div>
+
+            <!-- Projet 3 : Pokedex (en cours) -->
+            <div class="project-card">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pokedex" class="project-image">
+                <h3>Pokedex</h3>
+                <p>Site web en cours de développement pour consulter les Pokémon.</p>
+                <p><strong>SOON</strong></p>
+            </div>
         </div>
     </section>
 
@@ -76,8 +104,15 @@
             <textarea name="message" placeholder="Votre message" required></textarea>
             <button type="submit">Envoyer</button>
         </form>
-        <div id="confirmation-message">Votre message a bien été envoyé !</div>
+        <div id="confirmation-message" class="confirmation">
+            Votre message a bien été envoyé !
+        </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Marwan Merdji</p>
+    </footer>
 
 </body>
 </html>
