--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <div class="skill">Docker</div>
             <div class="skill">StarUML</div>
             <div class="skill">Kali Linux</div>
+            <div class="skill">Windows</div>
             <div class="skill">KeePass</div>
         </div>
     </section>
