--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Marwan Merdji</title>
+    <link rel="icon" type="image/png" href="marwan2.png">
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
@@ -26,7 +27,7 @@
     <section class="hero" id="apropos">
         <div class="hero-content">
             <div class="hero-img">
-                <img src="marwan.png" alt="Photo de profil">
+                <img src="marwan2.png" alt="Photo de profil">
             </div>
             <div class="hero-text">
                 <h1>Marwan Merdji</h1>
@@ -75,23 +76,24 @@
                 <img src="cryps.png" alt="Logiciel de Cryptage" class="project-image">
                 <h3>Logiciel de Cryptage</h3>
                 <p>Logiciel de cryptage pour sécuriser les données personnelles.</p>
-                <a href="https://github.com/kallechem/Project-Cryptag" target="_blank" class="project-link">Voir sur GitHub</a>
+                <a href="https://github.com/kallechem/Project-Cryptag" target="_blank" class="project-link github-button">View on GitHub</a>
             </div>
 
             <!-- Projet 2 -->
             <div class="project-card">
                 <img src="easyportal.png" alt="Portail Automatisé" class="project-image">
-                <h3>Easy Portal</Portal></h3>
+                <h3>Easy Portal</h3>
                 <p>Site Web Administraeur pour la gestion d'un portail automatisé.</p>
-                <a href="https://github.com/JR-CIEL-2-PROJETS/25-easyportal" target="_blank" class="project-link">Voir sur GitHub</a>
+                <a href="https://github.com/JR-CIEL-2-PROJETS/25-easyportal" target="_blank" class="project-link github-button">View on GitHub</a>
             </div>
 
             <!-- Projet 3 : Pokedex (en cours) -->
-            <div class="project-card">
+            <div class="project-card disabled">
                 <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pokedex" class="project-image">
                 <h3>Pokedex</h3>
                 <p>Site web en cours de développement pour consulter les Pokémon.</p>
-                <p><strong>SOON</strong></p>
+                <div class="coming-soon">Coming Soon</div>
+                <a href="#" class="project-link github-button disabled-link" onclick="return false;">View on GitHub</a>
             </div>
         </div>
     </section>
