--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <div class="skill">C++</div>
             <div class="skill">MySQL</div>
             <div class="skill">Cisco Packet Tracer</div>
+            <div class="skill">BurpSuite</div>
             <div class="skill">GitHub</div>
             <div class="skill">Docker</div>
             <div class="skill">StarUML</div>
