--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
 <body>
 
+    <!-- Animation de chargement -->
+    <div id="loading-animation">
+        <div class="spinner"></div>
+    </div>
+
     <!-- NAVBAR -->
     <nav>
         <div class="logo">
@@ -25,6 +30,7 @@
             <a href="#competences">Compétences</a>
             <a href="#projets">Projets</a>
             <a href="#contact">Contact</a>
+            <button id="theme-toggle">🌙</button>
         </div>
     </nav>
 
@@ -92,6 +98,8 @@
                 <p>Site Web Administrateur pour la gestion d'un portail automatisé.</p>
                 <a href="https://github.com/JR-CIEL-2-PROJETS/25-easyportal" target="_blank"
                     class="project-link github-button">View on GitHub</a>
+                    <a href="https://projet-easyportal.netlify.app/" target="_blank"
+                    class="project-link github-button">Web Site</a>
             </div>
 
             <div class="project-card disabled">
