--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <a href="#projets">Projets</a>
             <a href="#contact">Contact</a>
             <button id="theme-toggle">🌙</button>
+            <button id="sound-toggle">🔊</button>
         </div>
     </nav>
 
