--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script defer src="animations.js"></script>
+    <script defer src="animation.js"></script>
 </head>
 
 <body>
