--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
         <div class="menu">
             <a href="#apropos" class="nav-link">À propos</a>
+            <a href="#parcours" class="nav-link">Parcours</a>
             <a href="#competences" class="nav-link">Compétences</a>
             <a href="#projets" class="nav-link">Projets</a>
             <a href="#contact" class="nav-link">Contact</a>
@@ -60,11 +61,54 @@
         </div>
     </section>
 
+    <section id="parcours" class="parcours">
+  <h2>Parcours</h2>
+  <em>Un passionné d'informatique depuis ma tendre enfance</em>
+  <div class="timeline-container">
+    <div class="timeline-line"></div>
+    <div class="timeline-item" style="left: 5%;">
+      <div class="circle"></div>
+      <div class="date">2020-2021</div>
+      <div class="content">
+        <strong>Seconde générale Option SNT</strong><br>
+        
+      </div>
+    </div>
+    <div class="timeline-item" style="left: 30%;">
+      <div class="circle"></div>
+      <div class="date">2021 - 2023</div>
+      <div class="content">
+        <strong>Bac STI2D</strong>
+        <em>Admis mention Assez Bien</em>
+      </div>
+    </div>
+    <div class="timeline-item" style="left: 55%;">
+      <div class="circle"></div>
+      <div class="date">2023 - 2025</div>
+      <div class="content">
+        <strong>BTS CIEL</strong><br>
+        <em>Admis à 13,27</em>
+      </div>
+    </div>
+    <div class="timeline-item" style="left: 80%;">
+      <div class="circle"></div>
+      <div class="date">2025 - 2026</div>
+      <div class="content">
+        <strong>Cybersécurité 3ème année en alternance</strong><br>
+        
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
     <!-- SECTION 2 : Compétences -->
     <section class="skills" id="competences">
         <h2>Compétences</h2>
         <div class="skills-list">
             <div class="skill">HTML / CSS</div>
+            <div class="skill">Figma</div>
             <div class="skill">PHP</div>
             <div class="skill">JavaScript</div>
             <div class="skill">Python</div>
@@ -78,6 +122,8 @@
             <div class="skill">Kali Linux</div>
             <div class="skill">Windows</div>
             <div class="skill">KeePass</div>
+            <div class="skill">WireShark</div>
+            <div class="skill">VmWare</div>
         </div>
     </section>
 
