--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="hero-text">
                 <h1>Marwan Merdji</h1>
-                <p>Étudiant à l'ESGI</p>
+                <p>Étudiant à l'ESGI Bachelor Cybersécurité</p>
                 <div class="social-links">
                     <a href="https://github.com/merdjiMarwan" target="_blank">
                         <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub"> GitHub
@@ -97,6 +97,12 @@
         <strong>Cybersécurité 3ème année en alternance</strong><br>
         
       </div>
+    </div>
+  </div>
+<div class="cv-download">
+      <a href="Marwan.pdf" download="Marwan_Merdji_CV.pdf" class="download-link">
+        <button class="download-button">Télécharger mon CV</button>
+      </a>
     </div>
   </div>
 </section>
