--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="hero-text">
                 <h1>Marwan Merdji</h1>
-                <p>Étudiant à l'ESGI Bachelor Cybersécurité</p>
+                <p>A la recherche d'une alternance en Cybersécurité</p>
                 <div class="social-links">
                     <a href="https://github.com/merdjiMarwan" target="_blank">
                         <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub"> GitHub
@@ -94,7 +94,7 @@
       <div class="circle"></div>
       <div class="date">2025 - 2026</div>
       <div class="content">
-        <strong>Cybersécurité 3ème année en alternance</strong><br>
+        <strong>Recherche Cybersécurité 3ème année en alternance</strong><br>
         
       </div>
     </div>
